<resources>
    <string name="app_name">BooksEra</string>
    <string name="enter_password">Enter password</string>
    <string name="login_here">Login here</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="booksEra">BooksEra</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="welcome">Welcome</string>
    <string name="booksEra2">BooksEra</string>
    <string name="create_Account1">Create Account</string>
    <string name="login1">Login</string>
    <string name="email1">Email</string>
    <string name="password2">Password</string>
    <string name="create_new_account1">Create New Account</string>
    <string name="logout1">Logout</string>
    <string name="signout">Button</string>
    <string name="sign_out">Sign Out</string>
    <string name="Signout">SignOut</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation">navigation</string>
    <string name="books">Books</string>
    <string name="subscription">References</string>
    <string name="task">Task</string>
    <string name="this_is_task_1">This is task 1</string>
    <string name="_31_3_2020">31-3-2020</string>
    <string name="write_your_task_here">Write Your Task Here .....</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="add">add</string>
    <string name="subjects">Subjects</string>
    <string name="discover_your_subjects">Discover your books..!!!</string>
    <string name="rdbm">Rdbms</string>
    <string name="rdbms">rdbms</string>
    <string name="os">os</string>
    <string name="operating_system">Operating System</string>
    <string name="se">se</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="cpp">cpp</string>
    <string name="c">C++</string>
    <string name="js">js</string>
    <string name="javaa">java</string>
    <string name="and">and</string>
    <string name="rdbmss">Rdbms</string>
    <string name="ce">ce</string>
    <string name="computer_essentials">Computer Essentials</string>
    <string name="cg">Computer Graphics</string>
    <string name="cm1">CMS1</string>
    <string name="cm2">CMS2</string>
    <string name="cn">CN</string>
    <string name="cphm">CPHM</string>
    <string name="ds">Data Structure</string>
    <string name="ep">Engineering Physics</string>
    <string name="es">ES</string>
    <string name="fee">FEE</string>
    <string name="fetx">FETX</string>
    <string name="wd">Web Designing</string>
    <string name="st">Software Testing</string>
    <string name="cs">Computer Security</string>
    <string name="maths1">Mathematics I</string>
    <string name="lb">Lixnux Bsics</string>
    <string name="jsp">JSP</string>
    <string name="ict">ICT</string>
    <string name="im">IM</string>
    <string name="m2">Mathematics  II</string>
    <string name="textview">TextView</string>
    <string name="rdbms2">RDBMS</string>
    <string name="rdbms_about">An RDBMS is a DBMS designed specifically for relational databases.A relational database refers to a database that stores data in a structured format, using rows and columns.</string>
    <string name="rdbmstextbook">rdbmstextbook</string>
    <string name="rdbook1">Database system concepts</string>
    <string name="rdbms1">rdbms1</string>
    <string name="abraham_silberschtz">Abrahm Silberschtz</string>
    <string name="rdbook2">SQL,PL/SQL, The Programming Language Of Oracle</string>
    <string name="rdbook3">Oracle DBA Handbook</string>
    <string name="os2">Operating System</string>
    <string name="textbook">textbook</string>
    <string name="os_about">An Operating System (OS) is an interface between a computer user and computer hardware. An operating system is a software which performs all the basic tasks like file management, memory management, process management.</string>
    <string name="osbook1">Operating System Concepts</string>
    <string name="osbook2">Operating System</string>
    <string name="osbook4"><![CDATA[DOS 6 & 6.2]]></string>
    <string name="osbook5">Operating System</string>
    <string name="modern_operating_systems">Modern Operating Systems</string>
    <string name="system_programming_and_operating_system">System Programming and Operating System</string>
    <string name="java">Java</string>
    <string name="computer_security">Computer Security</string>
    <string name="data_structures">Data Structures</string>
    <string name="java_script">Java Script</string>
    <string name="rdbms5">RDBMS</string>
    <string name="digital_techniques">Digital Techniques</string>
    <string name="android">Android</string>
    <string name="c_programming">C Programming</string>
    <string name="advanced_java">Advanced Java</string>
    <string name="basics_of_java">Basics Of Java</string>
    <string name="java_methods">Java Methods</string>
    <string name="java_string">Java String</string>
    <string name="java_interfaces">Java Interfaces</string>
    <string name="classes_objects">Classes,Objects</string>
    <string name="java_packages">Java Packages</string>
    <string name="multithreading">MultiThreading</string>
    <string name="exception_handling">Exception Handling</string>
    <string name="applet_programming">Applet Programming</string>
    <string name="input_output_files">Input/Output files</string>
    <string name="introduction_to_data_structures">Introduction to Data Structures</string>
    <string name="searching_techniques">Searching Techniques</string>
    <string name="sorting_techniques">Sorting Techniques</string>
    <string name="linked_list">Linked List</string>
    <string name="stacks">Stacks</string>
    <string name="queues">Queues</string>
    <string name="recursion">Recursion</string>
    <string name="trees">Trees</string>
    <string name="graphs_and_their_application">Graphs And Their Application</string>
    <string name="introduction_and_security_trends">Introduction and Security trends</string>
    <string name="organizational_operational_security">Organizational/Operational security</string>
    <string name="encryption_algorithm_cipher">Encryption algorithm /Cipher</string>
    <string name="caesar_s_cipher">Caesar’s Cipher</string>
    <string name="shift_cipher">Shift Cipher</string>
    <string name="substitution_software_vigenere_cipher">substitution software Vigenere cipher</string>
    <string name="network_security">Network Security</string>
    <string name="system_security">System Security</string>
    <string name="threats_to_security">Threats to Security</string>
    <string name="type_of_attacks">Type of Attacks</string>
    <string name="security_basics">Security Basics</string>
    <string name="access_control">Access Control</string>
    <string name="introduction_to_javascript_programming">Introduction to JavaScript Programming</string>
    <string name="arrays_functions_and_string">Arrays ,Functions and String</string>
    <string name="forms_in_javascript">Forms in JavaScript</string>
    <string name="cookies">Cookies</string>
    <string name="browser_windows">Browser Windows</string>
    <string name="regular_expressions">Regular Expressions</string>
    <string name="javascript_and_frames">JavaScript and Frames</string>
    <string name="rollovers_status_bar">Rollovers, Status Bar.</string>
    <string name="banners_slideshow">Banners, Slideshow.</string>
    <string name="introduction_to_database_system">Introduction to Database system</string>
    <string name="relational_data_model">Relational Data Model</string>
    <string name="interactive_sql_tags">Interactive SQL Tags</string>
    <string name="clauses_join"><![CDATA[Clauses & Join:]]></string>
    <string name="operators">Operators</string>
    <string name="functions">Functions</string>
    <string name="views">Views</string>
    <string name="pl_sql">PL/SQL</string>
    <string name="procedures">Procedures</string>
    <string name="database_triggers">Database Triggers</string>
    <string name="interactive_sql">Interactive SQL</string>
    <string name="clauses_join1"><![CDATA[Clauses & Join]]></string>
    <string name="number_system_codes"><![CDATA[Number System & Codes]]></string>
    <string name="logic_gates_and_boolean_algebra">Logic Gates and Boolean Algebra</string>
    <string name="combinational_logic_design">Combinational Logic Design</string>
    <string name="multiplexer_demultiplexer"><![CDATA[Multiplexer & Demultiplexer]]></string>
    <string name="combinational_logic_design_using_msi_circuit">Combinational logic MSI circuit</string>
    <string name="flip_flops">Flip Flops</string>
    <string name="sequential_logic_design">Sequential Logic Design</string>
    <string name="what_is_object_oriented_programming">What is Object Oriented Programming</string>
    <string name="benefits_of_oop_applications"><![CDATA[Benefits of OOP& Applications]]></string>
    <string name="operators_in_c">Operators In C++</string>
    <string name="function_in_c">Function in C++</string>
    <string name="classes_objectscpp"><![CDATA[Classes &Objects]]></string>
    <string name="constructors_destructors"><![CDATA[Constructors & Destructors]]></string>
    <string name="operator_over_loading_and_pointers">Operator over loading and Pointers</string>
    <string name="inheritance_and_introduction_to_templates">Inheritance and Introduction to Templates</string>
    <string name="working_with_files_and_exception_handling">Working with files and Exception Handling</string>
    <string name="what_is_android_operating_system">What is Android Operating System</string>
    <string name="architecture">Architecture</string>
    <string name="configuration_of_andriod_environment">Configuration Of Andriod Environment</string>
    <string name="android_components">Android Components</string>
    <string name="layouts">Layouts</string>
    <string name="creating_android_user_interface_elements">Creating Android User Interface Elements</string>
    <string name="android_databases">Android Databases</string>
    <string name="security_permissions"><![CDATA[Security & Permissions]]></string>
    <string name="application_deployment">Application Deployment</string>
    <string name="welcome_to_booksera">Welcome To BooksEra</string>
    <string name="or">__________OR___________</string>
    <string name="new_to_booksera">New to BooksEra?</string>
    <string name="era">Era</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username1">"   Username"</string>
    <string name="email2">"   Email"</string>
    <string name="password5">"   Password"</string>
    <string name="phone_no5">"   Phone No"</string>
    <string name="confirm_password5">"   Confirm Password"</string>
    <string name="password12">"   Password"</string>
    <string name="line">_____________________________</string>
    <string name="subscribe">This is an introductory offer for 12 months in 100 rupees. Get all references of all the related concepts. Get access to every subject books and have a great learning experience </string>
    <string name="premium6">PREMIUM</string>
    <string name="get_premium">Get Premium</string>
    <string name="todo8">TODO</string>
</resources>