<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewTask">

    <EditText
        android:id="@+id/task_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green_blue"
        android:hint="@string/write_your_task_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextFields"
        tools:layout_editor_absoluteY="16dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/set_duedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:text="@string/set_due_date"
        android:textColor="@color/green_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edittext"
        app:drawableRightCompat="@drawable/ic_baseline_calendar_today_24" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:background="@color/purple_700"
        android:text="@string/save"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edittext" />
</androidx.constraintlayout.widget.ConstraintLayout>